# remus

./: .clang-format  .gitignore  CMD.md  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  Doxyfile  Makefile  README.md  STYLE_GUIDE.md  build.sh  cloudlab_depend.sh  launch.sh  launch_experiment.sh  launch_experiment_screen.sh  launch_test.sh  notes.md  run_hds_on_luigi.sh  script.sh  setup.sh
.github/: CODEOWNERS  CONTRIBUTING  CONTRIBUTING.md
cmake/: FindNUMA.cmake  FindRDMA.cmake  utils.cmake
colosseum/: client_adapter.h  client_adaptor.h  qps_controller.h  workload_driver.h
examples/iht/: CMakeLists.txt  README.md  common.h  experiment.h  iht_ds.h  main.cc  role_client.h  role_server.h  test.cc
examples/iht/scripts/: compress.py  exp_conf.json  experiments.sh  launch.py  plot.ini  plot.py  shutdown.py
examples/iht/scripts/graphs/: hashtable_clients.txt  iht_first_thread.txt
hds/: CMakeLists.txt
hds/benchmark/: CMakeLists.txt  gpu_unordered_map.cu  unordered_map.cc
hds/benchmark/benchmark/: CMakeLists.txt
hds/examples/: 0_linked_list.cc  0_linked_list.cu  1_gpu_linked_list.cu  2_rdma_linked_list.cc  3_kv_linked_list.cc  4_gpu_kv_linked_list.cu  5_rdma_kv_linked_list.cc  6_unordered_map.cc  7_gpu_unordered_map.cu  8_rdma_unordered_map.cc  CMakeLists.txt
hds/include/hds/allocator/: allocator.h
hds/include/hds/arch/: arch.h  numa.h  ptx.h
hds/include/hds/linked_list/: lock_linked_list.h
hds/include/hds/logging/: logging.h  print.h
hds/include/hds/threadgroup/: threadgroup.h
hds/include/hds/utility/: bitset.h
hds/include/hds/vcas/: vcas.h
hds/include/remus/hds/allocator/: allocator.h  rdma_allocator.h
hds/include/remus/hds/linked_list/: lock_linked_list.h
hds/include/remus/hds/linked_list/locked_nodes/: node_t.h  rdma_nodes.h  reg_cached_nodes.h
hds/include/remus/hds/threadgroup/: threadgroup.h
hds/include/remus/hds/unordered_map/: gpu_unordered_map.h  unordered_map.h
hds/include/remus/hds/unordered_map/kv_linked_list/: lazy_linked_list.h  lock_linked_list.h  utility.h
hds/include/remus/hds/unordered_map/kv_linked_list/lazy_nodes/: node_t.h  reg_cached_nodes.h
hds/include/remus/hds/unordered_map/kv_linked_list/locked_nodes/: node_t.h  rdma_nodes.h  reg_cached_nodes.h
hds/include/remus/hds/utility/: annotations.h  array.h  atomic.h  bit_cast.h  bitset.h  marked_ptr.h  optional.h  types.h
hds/include/rome/hds/allocator/: allocator.h  rdma_allocator.h
hds/include/rome/hds/linked_list/: lock_linked_list.h
hds/include/rome/hds/linked_list/locked_nodes/: node_t.h  rdma_nodes.h  reg_cached_nodes.h
hds/include/rome/hds/threadgroup/: threadgroup.h
hds/include/rome/hds/unordered_map/: gpu_unordered_map.h  unordered_map.h
hds/include/rome/hds/unordered_map/kv_linked_list/: lazy_linked_list.h  lock_linked_list.h  utility.h
hds/include/rome/hds/unordered_map/kv_linked_list/lazy_nodes/: node_t.h  reg_cached_nodes.h
hds/include/rome/hds/unordered_map/kv_linked_list/locked_nodes/: node_t.h  reg_cached_nodes.h
hds/include/rome/hds/utility/: array.h  atomic.h  bit_cast.h  bitset.h  marked_ptr.h  optional.h  types.h
iht/: .gitignore  CMakeLists.txt  README.md  common.h  context_manager.h  experiment.h  iht_ds.h  main.cc  role_client.h  role_server.h  test.cc
iht/scripts/: exp_conf.json  experiment_pb2.py  experiments.sh  launch.py  shutdown.py
iht/scripts/graphs/: hashtable_threads.txt  iht_first_client.txt
iht/structures/: hashtable.h  iht_ds.h  linked_set.h  map.h  test_map.h  types.cpp
logging/: CMakeLists.txt  logging.h
logging/include/remus/logging/: logging.h
logging/include/rome/logging/: logging.h
metrics/: CMakeLists.txt  counter.h  metric.h  stopwatch.cc  stopwatch.h  summary.h
metrics/atree/: macros.h  metadata.h  visitor.h
metrics/include/remus/metrics/: abstract_metric.h  counter.h  metrics_object.h  remote_object.h  stopwatch.h  summary.h  workload_driver_result.h
metrics/include/remus/metrics/atree/: atree.h  key.h  macros.h  metadata.h  value.h  visitor.h
metrics/include/rome/metrics/: abstract_metric.h  counter.h  metric.h  metrics_object.h  remote_object.h  stopwatch.h  summary.h  workload_driver_result.h
numa/: CMakeLists.txt
numa/include/remus/numa/: numa.h
numa/include/rome/numa/: numa.h
numa/test/: pinning_test.cc
protos/: CMakeLists.txt  colosseum.proto  colosseum.ts  experiment.proto  experiment.ts  metrics.proto  metrics.ts  rdma.proto  rdma.ts  workloaddriver.proto
rdma/: CMakeLists.txt  broker.cc  broker.h  channel.h  connection.h  connection_manager.h  connector.h  device.cc  device.h  listener.h  memory.cc  memory.h  memory_pool.h  messenger.h  peer.h  rdma.h  rdma_broker.cc  rdma_broker.h  rdma_device.cc  rdma_device.h  rdma_memory.cc  rdma_memory.h  rdma_util.h  receiver.h  remote_ptr.h  rmalloc.h  run_test.sh  segment.h  util.h
rdma/channel/: rdma_accessor.h  rdma_channel.h  rdma_messenger.h  sync_accessor.h  twosided_messenger.h  twosided_messenger_impl.h
rdma/connection_manager/: connection.h  connection_manager.h
rdma/include/remus/rdma/: connection.h  connection_map.h  connection_utils.h  connector.h  listener.h  memory_pool.h  peer.h  rdma.h  rdma_obj.h  rdma_ptr.h  segment.h
rdma/include/rome/rdma/: connection.h  connection_map.h  connection_utils.h  connector.h  listener.h  memory_pool.h  peer.h  rdma.h  rdma_ptr.h  remote_ptr.h  segment.h
rdma/memory_pool/: memory_pool.h  memory_pool_impl.h  remote_ptr.h
rdma/rmalloc/: rmalloc.h
rdma/src/: NOTES.txt  rdma_obj.cc
rdma/test/: allocator.cc  loopback.cc  multinode.cc  multinode_simple.cc  rdma_obj.cc
util/: CMakeLists.txt  clocks.h  coroutine.h  memory_resource.h  status_util.h  thread_pool.cc  thread_pool.h  thread_util.h  timing_util.h  variant_util.h
util/include/remus/util/: cli.h  status.h
util/include/remus/util/tcp/: README.md  tcp.h
util/include/rome/util/: cli.h  status.h
util/include/rome/util/tcp/: tcp.h
util/tcp/: README.md  tcp.h
workload/: CMakeLists.txt
workload/include/remus/workload/: workload_driver.h
workload/include/rome/workload/: workload_driver.h
(+58 files in other folders)
